/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.Charges.Contracts";

/*
* This reply is sent by the Charges domain to the Metering Point domain once the CreateDefaultChargeLinks request has been processed.
*
* Expected reply meta data:
* ReplyId - A UUID generated by the Charges Domain
* OriginalRequestId - For traceability - provided in the CreateDefaultChargeLinks request
* ProcessId - For traceability - UUID of the 'create metering point process' which is provided in the CreateDefaultChargeLinks request
*/
message CreateDefaultChargeLinksReply {
  string metering_point_id = 1; // The metering point for which default charge link were created. For the Danish version of Green Energy Hub, this is the 18-digits metering point id.
  
/*
* This message is included in the reply sent by the Charges domain to the Metering Point domain once the request has been processed successfully.
*
* A reply with did_create_charge_links = false is valid. It occurs when no default charges are defined for the given metering point type.
* When the Metering Point domain receives above reply there is no reason to send a CreateDefaultChargeLinkMessages request.
*/
  message CreateDefaultChargeLinksSucceeded {
    bool did_create_charge_links = 1; // Did the request result in any default charge links being added to the metering point (True = yes, False = no)
  }

/*
* This message is included in the reply sent by the Charges domain to the Metering Point domain in case the Charges domain fail to process the request.
*/
  message CreateDefaultChargeLinksFailed {
    enum ErrorCode {
      EC_METERING_POINT_UNKNOWN = 0;
    }
    ErrorCode error_code = 1; // The error_code specifies a reason for the failed request
  }
  
  oneof Reply {
    CreateDefaultChargeLinksSucceeded createDefaultChargeLinksSucceeded = 2;
    CreateDefaultChargeLinksFailed createDefaultChargeLinksFailed = 3;
  }
}
